update mail fetch and display